2013-07-17:
* Script was updated: do not delete psi_en.qm
  (English translation is required for some template strings)

2013-06-01:
* Script was updated: more verbose for tag option.
* comicfans44 is now in Chinese Simplified translation team.

2013-05-28:
* Script was updated: hostname transifex.net was changed to transifex.com.

2013-05-27:
* Ernesto Avilés Vázquez is now in Spanish translation team.
* LukynZ is now in Czech translation team.

2013-05-14:
* Jakub Liput is now in Polish translation team.

2013-04-04:
* oMid Hedayati is now in Persian translation team.

2013-02-07:
* Alexandro Casanova is now in Brazilian Portuguese translation team.

2013-02-01:
* Baurzhan Muftakhidinov is now in Kazakh translation team.

2013-01-14:
* Script was updated:
  - updated command line option 'tarball'; code.google.com will be used for
    sharing precompiled localization files because github.com closed this
    feature
  - changed name format for tarball with precompiled localization files
    (see http://psi-plus.com/wiki/en:packagement_rules)

2012-11-16:
* Script was updated: small fix in tr_sync option.
* Isratine Citizen is now in Hebrew translation team.

2012-11-12:
* Script was updated: fixed a typo.

2012-10-17:
* Script was updated:
  - new format of command line option tr_push
  - fixed offline work

2012-10-14:
* Added non-translated localization file for Hebrew translation.

2012-10-12:
* Script was updated:
  fixed determination of CUR_DIR variable when absolute path is used.

2012-10-11:
* Script was updated:
  - added new command line option tr_sync
  - test Internet connection

2012-10-05:
* Added non-translated localization file for Arabic translation.

2012-09-26:
* Script was updated:
  - Git repo was moved to new location (https://github.com/psi-plus)
  - psi-plus-i18n was renamed to psi-plus-l10n

2012-08-24:
* Script was updated: added new command line option tr_push.

2012-06-27:
* Jiri Slaby is now in Czech translation team.

2012-05-24: